--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@
 .env
 .env.*
 !.env.example
+
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
