--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,8 @@
 {
-    "name": "laravel/laravel",
+    "name": "keeleinstituut/tv-authorization-service",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Authorization Service of Tõlkevärav",
     "keywords": ["framework", "laravel"],
-    "license": "MIT",
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
