--- a/application/.env.example
+++ b/application/.env.example
@@ -1,8 +1,11 @@
+SERVER_HOST=0.0.0.0
+SERVER_PORT=8000
+
 APP_NAME=tv-authorization-service
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -13,7 +16,7 @@ DB_HOST=postgres
 DB_PORT=5432
 DB_DATABASE=app
 DB_USERNAME=user
-DB_PASSWORD=
+DB_PASSWORD=pass
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
