modify ci/cd script

--- a/.github/workflows/publish_packages.yaml
+++ b/.github/workflows/publish_packages.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   publish_if_necessary:
-    uses: keeleinstituut/tv-devops/.github/workflows/publish_if_necessary.yaml
+    uses: keeleinstituut/tv-devops/.github/workflows/publish_if_necessary.yaml@main
     with:
       github_organization: ${{ github.repository_owner }}
       app_name: ${{ github.event.repository.name }}
