--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -4,7 +4,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile.production
+      dockerfile: Dockerfile
     ports:
       - 8000:80
     environment:
