--- a/application/.env.example
+++ b/application/.env.example
@@ -1,3 +1,4 @@
+
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8000
 
@@ -26,3 +27,7 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
+
+KEYCLOAK_BASE_URL=
+KEYCLOAK_REALM=
+SSO_INTERNAL_CLIENT_ID=some-client-id
