--- a/application/composer.json
+++ b/application/composer.json
@@ -8,7 +8,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "keeleinstituut/tv-common-laravel-security": "0.0.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
@@ -63,5 +64,11 @@
         }
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+        "type": "vcs",
+        "url": "https://github.com/keeleinstituut/tv-common-laravel-security"
+        }
+    ]
 }
