--- a/application/.env.example
+++ b/application/.env.example
@@ -28,6 +28,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-KEYCLOAK_BASE_URL=
-KEYCLOAK_REALM=
+KEYCLOAK_REALM=tolkevarav-dev
+KEYCLOAK_BASE_URL=https://sso.dev.tolkevarav.eki.ee
+ACCEPTED_AUTHORIZED_PARTIES=tolkevarav-web-dev
 SSO_INTERNAL_CLIENT_ID=some-client-id
