--- a/application/composer.json
+++ b/application/composer.json
@@ -6,10 +6,10 @@
     "require": {
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.2",
+        "keeleinstituut/tv-common-laravel-security": "0.0.7",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8",
-        "keeleinstituut/tv-common-laravel-security": "0.0.3"
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
