--- a/application/composer.json
+++ b/application/composer.json
@@ -9,7 +9,8 @@
         "keeleinstituut/tv-common-laravel-security": "0.0.8",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "league/csv": "^9.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
