--- a/application/composer.json
+++ b/application/composer.json
@@ -9,7 +9,8 @@
         "keeleinstituut/tv-common-laravel-security": "0.0.7",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "keeleinstituut/tv-common-laravel-amqp": "0.0.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
@@ -67,8 +68,12 @@
     "prefer-stable": true,
     "repositories": [
         {
-        "type": "vcs",
-        "url": "https://github.com/keeleinstituut/tv-common-laravel-security"
+            "type": "vcs",
+            "url": "https://github.com/keeleinstituut/tv-common-laravel-security"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/keeleinstituut/tv-common-laravel-amqp"
         }
     ]
 }
