--- a/application/composer.json
+++ b/application/composer.json
@@ -6,11 +6,11 @@
     "require": {
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.2",
-        "keeleinstituut/tv-common-laravel-security": "0.0.7",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "keeleinstituut/tv-common-laravel-amqp": "0.0.3"
+        "keeleinstituut/tv-common-laravel-amqp": "0.0.10",
+        "keeleinstituut/tv-common-laravel-security": "0.0.12"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
@@ -64,16 +64,16 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
-    "prefer-stable": true,
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/keeleinstituut/tv-common-laravel-security"
+            "url": "https://github.com/keeleinstituut/tv-common-laravel-amqp"
         },
         {
             "type": "vcs",
-            "url": "https://github.com/keeleinstituut/tv-common-laravel-amqp"
+            "url": "https://github.com/keeleinstituut/tv-common-laravel-security"
         }
-    ]
+    ],
+    "minimum-stability": "dev",
+    "prefer-stable": false
 }
