--- a/application/composer.json
+++ b/application/composer.json
@@ -10,8 +10,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "keeleinstituut/tv-common-laravel-amqp": "0.0.11",
-        "keeleinstituut/tv-common-laravel-security": "0.0.12"
-        "laravel/tinker": "^2.8",
+        "keeleinstituut/tv-common-laravel-security": "0.0.12",
         "league/csv": "^9.0"
     },
     "require-dev": {
