feat(220) - fix of docker-compose.yml && improve logic of institution users sync according to the latest changes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,13 @@ services:
   app:
     depends_on:
       - postgres
+      - rabbitmq
 
   postgres:
     image: postgres:latest
     command: ["postgres", "-c", "log_statement=all"]
     ports:
-      - 5434:5432
+      - ${DB_PORT}:5432
     environment:
       - POSTGRES_DB=tv-authorization
       - POSTGRES_USER=user
@@ -17,7 +18,11 @@ services:
     volumes:
       - ./dev-db-init.sql:/docker-entrypoint-initdb.d/init.sql
 
-  redis:
-    image: redis:latest
+  rabbitmq:
+    image: rabbitmq:latest
     ports:
-      - 6379:6379
+      - ${AMQP_PORT}:5672
+      # - 15672:15672
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
