feat(#368,#369): Set up Swagger and document existing endpoints

--- a/application/.env.example
+++ b/application/.env.example
@@ -32,3 +32,5 @@ KEYCLOAK_REALM=tolkevarav-dev
 KEYCLOAK_BASE_URL=https://sso.dev.tolkevarav.eki.ee
 ACCEPTED_AUTHORIZED_PARTIES=tolkevarav-web-dev
 SSO_INTERNAL_CLIENT_ID=some-client-id
+
+L5_SWAGGER_GENERATE_ALWAYS=true
