--- a/application/.gitignore
+++ b/application/.gitignore
@@ -1,4 +1,5 @@
 /vendor/
+/storage/api-docs/api-docs.json
 
 .env
 .env.*
@@ -16,3 +17,4 @@ npm-debug.log
 yarn-error.log
 /.phpstorm.meta.php
 /_ide_helper.php
+
