--- a/application/.env.example
+++ b/application/.env.example
@@ -13,14 +13,14 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=localhost
+DB_HOST=postgres
 # Should be the same as ../.env DB_PORT
-DB_PORT=5434
+DB_PORT=5432
 DB_DATABASE=app
 DB_USERNAME=user
 DB_PASSWORD=pass
 
-AMQP_HOST=localhost
+AMQP_HOST=rabbitmq
 # Should be the same as ../.env AMQP_PORT
 AMQP_PORT=5672
 AMQP_USER=guest
