feat(#533): publish audit log messages after successful flows of relevant events

--- a/application/.env.example
+++ b/application/.env.example
@@ -39,6 +39,8 @@ KEYCLOAK_BASE_URL=https://sso.dev.tolkevarav.eki.ee
 KEYCLOAK_REALM=tolkevarav-dev
 SSO_INTERNAL_CLIENT_ID=some-client-id
 KEYCLOAK_SERVICE_ACCOUNT_SYNC_ROLE=sync-user-role
+KEYCLOAK_SERVICE_ACCOUNT_CLIENT_SECRET=XRi4jUCOx2s6jaPhMLj7Kzmcx4KLGWiR
+KEYCLOAK_SERVICE_ACCOUNT_CLIENT_ID=tv-translation-order-service
 
 # Can be used for local development
 # REALM_PUBLIC_KEY_CACHE_DRIVER=array
@@ -46,3 +48,5 @@ KEYCLOAK_SERVICE_ACCOUNT_SYNC_ROLE=sync-user-role
 # REALM_PUBLIC_KEY_RETRIEVAL_MODE=config
 
 L5_SWAGGER_GENERATE_ALWAYS=true
+AUDIT_LOG_EVENTS_EXCHANGE=audit-log-events
+AUDIT_LOG_TRACE_ID_HTTP_HEADER=x-request-id
