--- a/application/composer.json
+++ b/application/composer.json
@@ -7,12 +7,13 @@
         "php": "^8.2",
         "darkaonline/l5-swagger": "^8.5",
         "guzzlehttp/guzzle": "^7.2",
+        "keeleinstituut/tv-common-laravel-amqp": "0.0.40",
+        "keeleinstituut/tv-common-laravel-security": "0.0.18",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "keeleinstituut/tv-common-laravel-amqp": "0.0.17",
-        "keeleinstituut/tv-common-laravel-security": "0.0.14",
-        "league/csv": "^9.0"
+        "league/csv": "^9.0",
+        "rogervila/array-diff-multidimensional": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
