feat(#395) - add missing configuration params

--- a/application/.env.example
+++ b/application/.env.example
@@ -50,3 +50,5 @@ KEYCLOAK_SERVICE_ACCOUNT_CLIENT_ID=tv-translation-order-service
 L5_SWAGGER_GENERATE_ALWAYS=true
 AUDIT_LOG_EVENTS_EXCHANGE=audit-log-events
 AUDIT_LOG_TRACE_ID_HTTP_HEADER=x-request-id
+
+EMAIL_NOTIFICATION_EXCHANGE=tv-notification.email
