--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -12,7 +12,8 @@ RUN docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql && \
                                 pdo_pgsql \
                                 sodium \
                                 pcntl \
-                                sockets
+                                sockets \
+                                exif
 
 RUN mkdir $APP_ROOT
 WORKDIR $APP_ROOT
