--- a/application/composer.json
+++ b/application/composer.json
@@ -13,7 +13,9 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "league/csv": "^9.0",
-        "rogervila/array-diff-multidimensional": "*"
+        "league/flysystem-aws-s3-v3": "^3.15",
+        "rogervila/array-diff-multidimensional": "*",
+        "spatie/laravel-medialibrary": "dev-main"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
